# django-msgraph_email

./: README.md  pyproject.toml
.github/workflows/: ci.yml
msgraph_backend/: __init__.py
