[build-system]
requires = ["setuptools", "django"]
build-backend = "setuptools.build_meta"

[project]
name = "django-msgraph_backend"
version = "1.0.0"
authors = [{ name = "Kishan Kumar", email = "kishank@gspc.int" }]
description = "A Microsoft Graph Email Backend for Django using msal."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["msal"]
keywords = ["Django", "Backend", "EmailBackend", "Microsoft Graph"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/PacificCommunity/django-msgraph_backend"
Repository = "https://github.com/PacificCommunity/django-msgraph_backend"
Issues = "https://github.com/PacificCommunity/django-msgraph_backend/issues"
